refactor(FindCommand.java): Modify stream code
Changed .collect(Collectors.toList()) to .toList().